--- a/Language/Functions/Bits and Bytes/bitClear.adoc
+++ b/Language/Functions/Bits and Bytes/bitClear.adoc
@@ -30,7 +30,7 @@ Limpia (escribe un `0`) un bit de una variable numérica.
 `n`: bit que sera eliminado, comenzando en `0` para el bit menos significativo (más a la derecha).
 
 [float]
-=== Retorna
+=== Retorno
 Nada.
 
 --
