--- a/Language/Functions/Bits and Bytes/bitSet.adoc
+++ b/Language/Functions/Bits and Bytes/bitSet.adoc
@@ -31,7 +31,7 @@ Establece (escribe un `1`) un bit de una variable numérica.
 `n`: bit que se establecera, comenzando en `0` para el bit menos significativo (más a la derecha).
 
 [float]
-=== Retorna
+=== Retorno
 Nada.
 
 --
