--- a/Language/Functions/Bits and Bytes/lowByte.adoc
+++ b/Language/Functions/Bits and Bytes/lowByte.adoc
@@ -28,7 +28,7 @@ Extrae el byte de orden inferior (más a la derecha) de una variable (por ejempl
 `x`: Un valor de cualquier tipo.
 
 [float]
-=== Retorna
+=== Retorno
 `byte`
 
 --
