--- a/Language/Functions/Random Numbers/randomSeed.adoc
+++ b/Language/Functions/Random Numbers/randomSeed.adoc
@@ -27,7 +27,7 @@ Por el contrario, ocasionalmente puede ser útil usar secuencias pseudoaleatoria
 
 [float]
 === Retorno
-Nada
+Nada.
 
 --
 // OVERVIEW SECTION ENDS
